--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0 5% 0 5%;
+    font-family: 'Lato', sans-serif;
 }
 
 /** Logo **/
@@ -38,6 +39,18 @@ header img {
 
 /**Filter**/
 
+.red {
+    background-color: #ED6454;
+}
+
+.blue {
+    background-color: #3282F7;
+}
+
+.green {
+    background-color: #68D9A4;
+}
+
 .filter_select {
     width: 100%;
     display: flex;
@@ -46,6 +59,7 @@ header img {
 
 .filter_select_trigger {
     display: flex;
+    justify-content: space-between;
     position: relative;
     align-items: center;
     margin-right: 5rem;
@@ -59,58 +73,139 @@ header img {
 
 .filter_select_trigger span {
     margin-left: 1rem;
-    font-size: 18px;
-}
-
-.filter .ingredient {
-    background-color: #3282F7;
-}
-
-.filter .appareil {
-    background-color: #68D9A4;
-}
-
-.filter .ustensiles {
-    background-color: #ED6454;
+    font-size: 20px;
 }
 
 .arrow {
     position: relative;
     height: 1rem;
     width: 1rem;
+    margin-right: 0.4rem;
 }
 
 .arrow::before, .arrow::after {
     content: "";
     position: absolute;
     bottom: 0px;
-    width: 0.10rem;
+    width: 0.2rem;
     height: 100%;
-    left: 10%;
     transition: all 0.5s;
 }
 
 .arrow::after {
-    left: 3rem;
     background-color: white;
     transform: rotate(-45deg);
 }
 
-.open .arrow::after {
-    left: 0.5rem;
+.active .arrow::after {
+    left: 0.3rem;
     transform: rotate(45deg);
     background-color: white;
 }
 
-.open .arrow::before {
+.active .arrow::before {
     transform: rotate(-45deg);
     background-color: white;
+    right: 1.1rem;
 }
 
 .arrow::before {
-    left: 2.35rem;
+    right: 1.4rem;
     transform: rotate(45deg);
     background-color: white;
+}
+
+.active .arrow {
+    margin-right: 1rem;
+}
+
+
+/**TAG**/
+
+.tag_content{
+    border-radius: 0 0 5px 5px;
+    color: white;
+    padding: 0.5rem;
+    position: absolute;
+    display: grid;
+    width: 498px;
+    height: fit-content;
+    grid-template-columns: repeat(3,1fr);
+    font-size: 1rem;
+    z-index: 3;
+    pointer-events: none;
+    opacity: 0;
+    margin-top: -8px;
+    overflow: hidden;
+}
+
+.tag_input {
+    background-color: #3282F7;
+    color: white;
+    position: absolute;
+    top: 17px;
+    left: 0;
+    padding-left: 0.5rem;
+    outline: none;
+    font-size: 20px;
+    border: none;
+    width: 350px;
+}
+
+.tag {
+    line-height: 22px;
+    margin-left: 0.1rem;
+}
+
+#tag_array {
+    display: flex;
+    flex-direction: row;
+}
+
+.tag_selected {
+    margin-right: 1rem;
+    width: fit-content;
+    padding: 0.5rem;
+    border-radius: 5px;
+    color: white;
+}
+
+.tag_selected::after {
+    content: "\f057";
+    font-family: "Font Awesome 5 free";
+    padding-left: 0.5rem;
+}
+
+.active {
+    width: 514px;
+}
+
+.hidden {
+    display: none;
+}
+
+/*ul active*/
+
+.ul_active {
+    opacity: 1;
+    overflow-y: hidden;
+    pointer-events: auto;
+}
+
+.ul_active li:hover {
+    color: black;
+}
+
+.red {
+    background-color: #ED6454;
+}
+
+.green {
+    background-color: #68D9A4;
+}
+
+.blue {
+    background-color: #3282F7;
 }
 
 /** Main ( recipe ) **/ 
@@ -136,9 +231,13 @@ article {
     flex-direction: row;
     justify-content: space-between;
     height: fit-content;
-    margin: 0;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
+h4 i {
+    margin-right: 0.5rem;
+}
 
 .recipe_card {
     position: absolute;
@@ -150,19 +249,21 @@ article {
 .cook_method {
     display: flex;
     flex-direction: row;
-    font-size: 0.75rem;
+    font-size: 0.9rem;
     overflow: hidden;
     height: 137px;
 }
 
 .description {
     width: 60%;
+    margin-right: 0.8rem;
     
 }
 
 .ingredients {
     font-weight: 700;
-    margin-right: 2rem;
+    margin-right: 1rem;
+    padding-left: 1rem;
 }
 
 ul {
