--- a/style.css
+++ b/style.css
@@ -35,7 +35,11 @@ header img {
     outline: none;
 }
 
-
+.error_text {
+    color: red;
+    position: absolute;
+    top: -25px;
+}
 
 /**Filter**/
 
@@ -74,6 +78,7 @@ header img {
 .filter_select_trigger span {
     margin-left: 1rem;
     font-size: 20px;
+    pointer-events: none;
 }
 
 .arrow {
@@ -163,6 +168,7 @@ header img {
 .tag {
     line-height: 22px;
     margin-left: 0.1rem;
+    cursor: pointer;
 }
 
 #tag_array {
@@ -176,6 +182,7 @@ header img {
     padding: 0.5rem;
     border-radius: 5px;
     color: white;
+    cursor: pointer;
 }
 
 .tag_selected::after {
